add Math support via KaTeX, with keyboard shortcuts

--- a/components/lexical/theme/theme.module.css
+++ b/components/lexical/theme/theme.module.css
@@ -75,7 +75,7 @@
   .text {
       line-height: 130% !important;
   }
-  .text img {
+  .text img:not(:global(.sn__math) *) {
       min-width: 30% !important;
   }
 }
