--- a/styles/text.scss
+++ b/styles/text.scss
@@ -1,3 +1,5 @@
+@import 'katex/dist/katex.min.css';
+
 .sn__paragraph {
   display: block;
   white-space: pre-wrap;
@@ -346,4 +348,13 @@ span.sn__mediaContainer {
   position: sticky;
   top: 0;
   background-color: #f0f0f0;
+}
+
+.sn__math {
+  cursor: default;
+  user-select: none;
+}
+
+.sn__math.focused {
+  outline: 2px solid rgb(60, 132, 244);
 }
