--- a/components/lexical/theme/theme.module.css
+++ b/components/lexical/theme/theme.module.css
@@ -393,9 +393,12 @@
   position: absolute;
   background-color: var(--theme-inputBg);
   border-radius: 0.4rem;
+  top: 0;
+  left: 0;
   z-index: 1000;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.8);
   transition: opacity 0.2s ease-in-out;
+  will-change: transform;
 }
 
 .floatingToolbar {
