html as loading placeholder for LexicalReader, many small fixes
- prevent importing an empty editor state
- adjust code nodes theme for dark and light mode
- hide floating elements far away from the viewport
- tweaks to floating elements animations
- fix overflow and overflowing button on Reader and Reader loading placeholder
- accept and use a callback ref for LexicalReader and a normal ref for (markdown) Text

bits:
- split SNLexical in LexicalEditor and LexicalReader
- forward ref to loading placeholder and Reader

--- a/components/lexical/theme/theme.module.css
+++ b/components/lexical/theme/theme.module.css
@@ -396,6 +396,8 @@
   top: 0;
   left: 0;
   z-index: 1000;
+  opacity: 0;
+  transform: translate(-10000px, -10000px);
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.8);
   transition: opacity 0.2s ease-in-out;
   will-change: transform;
