truncate HTML for FlatComment by sanitizing and parsing it with SSR support; overflow at 50vh for truncated HTML; prepare for imgproxy support

--- a/components/lexical/theme/theme.module.css
+++ b/components/lexical/theme/theme.module.css
@@ -11,6 +11,10 @@
   --grid-gap: 0.5rem;
 }
 
+.textTruncated {
+  max-height: 50vh;
+}
+
 .text[contenteditable="false"] {
   background-color: var(--theme-body) !important;
 }
