--- a/styles/text.scss
+++ b/styles/text.scss
@@ -124,7 +124,7 @@ span.sn__mediaContainer .outlawed {
   background-color: var(--theme-commentBg);
 }
 
-.sn__embedWrapper__loading__message__icon {
+.sn__embedWrapper__loading__message svg {
   width: 24px;
   height: 24px;
   margin-bottom: 1rem;
