fix: enforce maxWidth of 500px for MediaNode, don't force the chosen width as final maxWidth; restore loading from local draft on editor load

--- a/styles/text.scss
+++ b/styles/text.scss
@@ -35,6 +35,7 @@ span.sn__mediaContainer {
   display: inline-block;
   position: relative;
   user-select: none;
+  --max-width: 500px;
 }
 
 span.sn__mediaContainer .outlawed {
