migrate eligible plugins to Lexical Extension; log editor errors instead of throwing everything
migrated:
- ShortcutsPlugin -> ShortcutsExtension
- ListPlugin -> ListExtension
- CheckListPlugin -> CheckListExtension
- LinkPlugin -> LinkExtension
- TablePlugin -> TableExtension
- UniversalCommandsPlugin -> UniversalCommandsExtension
- AutoFocusPlugin -> AutoFocusExtension

bits:
- debug preferences moved to toolbar
- some moving around

--- a/components/lexical/theme/theme.module.css
+++ b/components/lexical/theme/theme.module.css
@@ -199,6 +199,10 @@
   touch-action: manipulation;
 }
 
+.toolbar :global(.dropdown-toggle::after) {
+  display: none;
+}
+
 .toolbar .divider {
   width: 1px;
   height: 20px;
