auto-link in rich mode, transforming in link/embed/media node; refactor plugins and extensions; adjust toolbar dropdown behavior

--- a/styles/text.scss
+++ b/styles/text.scss
@@ -46,6 +46,7 @@ span.sn__mediaContainer .outlawed {
 .sn__mediaContainer img,
 .sn__mediaContainer video {
   max-width: var(--max-width);
+  max-height: var(--max-width);
   display: block;
   cursor: default;
   aspect-ratio: var(--aspect-ratio);
